Changes after session 6

--- a/MyFirstApp/app/src/main/AndroidManifest.xml
+++ b/MyFirstApp/app/src/main/AndroidManifest.xml
@@ -12,13 +12,18 @@
         android:theme="@style/AppTheme">
         <activity android:name=".cart.CartActivity">
         </activity>
-        <activity android:name=".LoginActivity">
+        <activity android:name=".LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-                </intent-filter>
+            </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".JavaActivity">
+
+        </activity>
+        <activity android:name=".MainActivity"
+            />
+
     </application>
 
 </manifest>
