--- a/MyFirstApp/app/src/main/AndroidManifest.xml
+++ b/MyFirstApp/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="doc.home.firstapp">
 
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -12,31 +13,48 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <service
+            android:name=".services.MyIntentService"
+            android:exported="false"></service>
+        <service
+            android:name=".services.MyService"
+            android:enabled="true"
+            android:exported="true" />
 
-        <activity android:name=".cart.CartActivity">
-            <intent-filter>
-                <action android:name="SUMIT_ACTION"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <data android:mimeType="text/plain"/>
-            </intent-filter>
-        </activity>
-        <activity android:name=".LoginActivity" >
+        <activity
+            android:name=".ui.FragmentActivity"
+            android:label="@string/title_activity_fragment"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".JavaActivity">
+        <activity
+            android:name=".BottomNavigation"
+            android:label="@string/title_activity_bottom_navigation" />
+        <activity android:name=".cart.CartActivity">
             <intent-filter>
-                <action android:name="SUMIT_ACTION"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <data android:mimeType="text/plain"/>
+                <action android:name="SUMIT_ACTION" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
-            />
-        <activity android:name=".SecondJuneActivity"/>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".JavaActivity">
+            <intent-filter>
+                <action android:name="SUMIT_ACTION" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="text/plain" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".SecondJuneActivity" />
     </application>
 
 </manifest>
